--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
   </div>
 
-  <audio id="myAudio" src="Rex Orange County - THE SHADE (Lyrics).mp3"></audio>
+  <audio id="myAudio" src="Rex-Orange-County---THE SHADE-(Lyrics).mp3"></audio>
   <button id="playButton">Nyalakan Lagu</button>
 
   <script>
