--- a/index.html
+++ b/index.html
@@ -1,132 +1,2 @@
-<!DOCTYPE html> 
-<html lang="id">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Lirik Lagu The Shade</title>
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      background-color: #f0f0f0;
-      color: #333;
-      margin: 0;
-      padding: 20px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      overflow: hidden;
-      flex-direction: column;
-    }
-    .container {
-      max-width: 600px;
-      background: #fff;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    h1 {
-      color: #4a4a4a;
-      margin-bottom: 20px;
-    }
-    .lyrics {
-      font-size: 1.2rem;
-      line-height: 1.5;
-      opacity: 0;
-      transition: opacity 0.5s ease;
-    }
-    .line {
-      margin: 10px 0;
-      display: none;
-    }
-    .line.visible {
-      display: block;
-      opacity: 1;
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      border: none;
-      border-radius: 5px;
-      background-color: #61dafb;
-      color: #282c34;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-    button:hover {
-      background-color: #21a1f1;
-    }
-  </style>
-</head>
-<body>
-
-  <div class="container">
-    <h1>Lirik Lagu The Shade</h1>
-    <div class="lyrics">
-      <div class="line">Two, three, four</div>
-      <div class="line">I was closing all the blinds</div>
-      <div class="line">Just so you could sleep the night through</div>
-      <div class="line">I was staying by your side</div>
-      <div class="line">Just so I knew you were okay</div>
-      <div class="line">And I was opening the door</div>
-      <div class="line">Just to see if you would walk through</div>
-      <div class="line">I started painting all the walls</div>
-      <div class="line">Just to see if you liked the shade</div>
-      <div class="line">I would love just to be stuck to your side</div>
-      <div class="line">Not with anybody else, anybody else</div>
-      <div class="line">It's enough just to keep us occupied</div>
-      <div class="line">Please don't go</div>
-      <div class="line">I would love just to be stuck to your side</div>
-      <div class="line">Not with anybody else, anybody else (Don't go)</div>
-      <div class="line">It's enough just to keep us occupied (Please don't go)</div>
-      <div class="line">You were holding out your hands</div>
-      <div class="line">Hoping I'd be there to hold to</div>
-      <div class="line">I went out to Amsterdam</div>
-      <div class="line">Just so I could give you some space</div>
-      <div class="line">But I kept opening my door</div>
-      <div class="line">Just to see if you would walk through</div>
-      <div class="line">But now I'm painting all my walls</div>
-      <div class="line">Just to see if you like the shade</div>
-      <div class="line">I would love just to be stuck to your side</div>
-      <div class="line">Not with anybody else, anybody else</div>
-      <div class="line">It's enough just to keep us occupied</div>
-      <div class="line">Please don't go</div>
-    </div>
-  </div>
-
-  <audio id="myAudio" src="Rex-Orange-County---THE SHADE-(Lyrics).mp3"></audio>
-  <button id="playButton">Nyalakan Lagu</button>
-
-  <script>
-    const lines = document.querySelectorAll('.line');
-    let currentLine = 0;
-    let intervalId;
-
-    function showNextLine() {
-      if (currentLine < lines.length) {
-        lines[currentLine].classList.add('visible');
-        currentLine++;
-      } else {
-        clearInterval(intervalId);
-      }
-    }
-
-    const audio = document.getElementById('myAudio');
-    const playButton = document.getElementById('playButton');
-
-    playButton.addEventListener('click', function() {
-      if (audio.paused) {
-        audio.play();
-        playButton.textContent = 'Hentikan Lagu';
-        intervalId = setInterval(showNextLine, 3000);
-      } else {
-        audio.pause();
-        playButton.textContent = 'Nyalakan Lagu';
-        clearInterval(intervalId);
-      }
-    });
-  </script>
-</body>
-</html>
+<audio id="myAudio" src="ssstik.io_1745748856606.mp3" controls></audio>
+<button id="playButton">Nyalakan Lagu</button>
