--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<audio id="myAudio" src="ssstik.io_1745748856606.mp3" controls></audio>
+<audio id="myAudio" src="audio/ssstik.io_1745748856606.mp3" controls></audio>
 <button id="playButton">Nyalakan Lagu</button>
