--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<audio id="myAudio" src="audio/ssstik.io_1745748856606.mp3" controls></audio>
+<audio id="myAudio" src="audio/SomebodyPleasure.mp3" controls></audio>
 <button onclick="document.getElementById('myAudio').play()">Nyalakan Lagu</button>
