--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
-<audio id="myAudio" src="audio/SomebodyPleasure.mp3" controls></audio>
-<button onclick="document.getElementById('myAudio').play()">Nyalakan Lagu</button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Audio Sample</title>
+</head>
+<body>
+    <h1>I Love You,but u hate me :)</h1>
+    <audio controls>
+        <source src="https://vt.tiktok.com/ZShPjUV5W/" type="audio/mpeg">
+        Your browser does not support the audio tag.
+    </audio>
+</body>
+</html>
