--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>I Love You,but u hate me :)</h1>
-    <audio autoplay>
+    <audio controls>
         <source src="audio/SomebodyPleasure.mp3" type="audio/mp3">
-        Your browser does not support the audio tag.
+      
     </audio>
 </body>
 </html>
