--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>I Love You,but u hate me :)</h1>
     <audio controls>
-        <source src="audio/SomebodyPleasure.mp3" type="audio/mp3">
+        <source src="SomebodyPleasure.mp3" type="audio/mp3">
       
     </audio>
 </body>
