--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Audio Sample</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Video Sederhana</title>
+<style>
+  body, html {
+    margin: 0; padding: 0;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #000;
+  }
+  video {
+    max-width: 100%;
+    max-height: 100vh;
+    border-radius: 10px;
+  }
+</style>
 </head>
 <body>
-    <h1>I Love You,but u hate me :)</h1>
-    <audio controls>
-        <source src="SomebodyPleasure/SomebodyPleasure.mp3" type="audio/mpeg">
-      
-    </audio>
+  <video controls autoplay muted>
+    <source src="https://vt.tiktok.com/ZShPhP4FD/" type="video/webm" />
+    <source src="https://vt.tiktok.com/ZShPhP4FD/" type="video/mp4" />
+    Browser Anda tidak mendukung video tag.
+  </video>
 </body>
 </html>
