--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </head>
 <body>
   <video controls autoplay muted>
-    <source src="VID-20250512-WA0001/VID-20250512-WA0001.mp4" type="video/webm" />
-    <source src="VID-20250512-WA0001/VID-20250512-WA0001.mp4" type="video/mp4" />
+    <source src="VID-20250512-WA0001.mp4" type="video/webm" />
+    <source src="VID-20250512-WA0001.mp4" type="video/mp4" />
     Browser Anda tidak mendukung video tag.
   </video>
 </body>
