--- a/index.html
+++ b/index.html
@@ -1,30 +1,1 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Video Sederhana</title>
-<style>
-  body, html {
-    margin: 0; padding: 0;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #000;
-  }
-  video {
-    max-width: 100%;
-    max-height: 100vh;
-    border-radius: 10px;
-  }
-</style>
-</head>
-<body>
-  <video controls autoplay muted>
-    <source src="VID-20250512-WA0001.mp4" type="video/webm" />
-    <source src="VID-20250512-WA0001.mp4" type="video/mp4" />
-    Browser Anda tidak mendukung video tag.
-  </video>
-</body>
-</html>
+<img src)="https://github.com/ArjunKhan-id/Tumbalproyek/raw/main/ANWR7398.JPG" alt="logo" width="200"
