--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<img src)="https://github.com/ArjunKhan-id/Tumbalproyek/raw/main/ANWR7398.JPG" alt="logo" width="200"
+<img src="https://github.com/ArjunKhan-id/Tumbalproyek/raw/main/ANWR7398.JPG" alt="Gambar Tumbal" width="300"
