--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 woi lah cikk, eror
-<img src="https://github.com/ArjunKhan-id/Tumbalproyek/raw/main/ANWR7398.JPG" alt="Gambar Tumbal" width="300"
+<img src="https://github.com/ArjunKhan-id/Tumbalproyek/images/ANWR7398.JPG" alt="Gambar Tumbal" width="300">
