--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-woi lah cikk, eror
-<img src="https://github.com/ArjunKhan-id/Tumbalproyek/images/ANWR7398.JPG" alt="Gambar Tumbal" width="300">
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <title>Contoh Gambar</title>
+</head>
+<body>
+    <h1>Menampilkan Gambar dari GitHub Pages</h1>
+    <img src="https://arjunkhan-id.github.io/Tumbalproyek/ANWR7398.JPG" alt="Deskripsi Gambar" width="300">
+</body>
+</html>
