--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Contoh Gambar</title>
 </head>
 <body>
-    <h1>Menampilkan Gambar dari GitHub Pages</h1>
-    <img src="https://arjunkhan-id.github.io/Tumbalproyek/ANWR7398.JPG" alt="Deskripsi Gambar" width="300">
+    <h1>Keluarga Kecilllll</h1>
+    <img src="https://arjunkhan-id.github.io/Tumbalproyek/ANWR7398.JPG" alt="Deskripsi Gambar" width="1000">
 </body>
 </html>
