--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Orang Kulit Hitam Tak Kalah Manis Kaka</title>
+    <title>cinta semuwa</title>
     <style>
         body {
             display: flex;
@@ -43,11 +43,11 @@
     </style>
 </head>
 <body>
-    <h1>Gambar dan Bendera</h1>
+    <h1>Orang Kulit Hitam Tak Kalah Manis Kaka </h1>
     
-    <img id="image1" src="https://github.com/ArjunKhan-id/Tumbalproyek/images/20250226_092134.heic" alt="Gambar 1" />
-    <img id="image2" src="https://github.com/ArjunKhan-id/Tumbalproyek/images/20250226_092432.heic" alt="Gambar 2" />
-    <img id="image3" src="https://github.com/ArjunKhan-id/Tumbalproyek/images/20250416_122518.heic" alt="Gambar 3" />
+    <img src="https://github.com/ArjunKhan-id/Tumbalproyek/images/20250226_092134.heic" alt="Gambar 1" />
+    <img src="https://github.com/ArjunKhan-id/Tumbalproyek/images/20250226_092432.heic" alt="Gambar 2" />
+    <img src="https://github.com/ArjunKhan-id/Tumbalproyek/images/20250416_122518.heic" alt="Gambar 3" />
     
     <div id="flag1" class="flag">🇵🇬</div>
     <div id="flag2" class="flag">🇮🇱</div>
