--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 <body>
     <h1>Orang Kulit Hitam Tak Kalah Manis Kaka </h1>
     
-    <img src="https://github.com/ArjunKhan-id/Tumbalproyek/images/20250226_092134.heic" alt="Gambar 1" />
-    <img src="https://github.com/ArjunKhan-id/Tumbalproyek/images/20250226_092432.heic" alt="Gambar 2" />
-    <img src="https://github.com/ArjunKhan-id/Tumbalproyek/images/20250416_122518.heic" alt="Gambar 3" />
+    <img id="image1" src="https://github.com/ArjunKhan-id/Tumbalproyek/20250226_092134.heic" alt="Gambar 1" />
+    <img id="image2" src="https://github.com/ArjunKhan-id/Tumbalproyek/20250226_092432.heic" alt="Gambar 2" />
+    <img id="image3" src="https://github.com/ArjunKhan-id/Tumbalproyek/20250416_122518.heic" alt="Gambar 3" />
     
     <div id="flag1" class="flag">🇵🇬</div>
     <div id="flag2" class="flag">🇮🇱</div>
